modified the box 1 corrected the overflow problem

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@
             padding-left: 25px;
             padding-right: 25px;
             padding-bottom: 10px;
+            overflow-y: auto;
             
 
         }
